[tool.poetry]
name = "async-websocket-pool"
version = "0.1.9"
description = "async-websocket-pool is a Python library that enables efficient creation and management of a pool of asynchronous WebSocket clients."
authors = ["mpol1t"]
license = "MIT"
readme = "README.md"
packages = [{include = "async_websocket_pool"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = ">=11.0.3,<16.0.0"
iniconfig = "2.1.0"
packaging = "25.0"
pluggy = "1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1,<9.0.0"
pytest-asyncio = ">=0.21,<1.3"
coverage = "^7.4.4"
pytest-cov = ">=5,<7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
