[tool.poetry]
name = "async-websocket-pool"
version = "0.2.0"
description = "async-websocket-pool is a Python library that enables efficient creation and management of a pool of asynchronous WebSocket clients."
authors = ["mpol1t"]
license = "MIT"
readme = "README.md"
packages = [{ include = "async_websocket_pool" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4,<10.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7"
coverage = "^7"
ruff = ">=0.6.9,<0.15.0"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = false

files = ["async_websocket_pool"]
